--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,75 @@
-body {
-  margin: 0;
-  font-size: 15px;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+* {
+	box-sizing: border-box;
 }
 
+html {
+	font-size: 14px;
+}
+
+@media (min-width: 400px) {
+	html {
+		font-size: 15px;
+	}
+}
+
+@media (min-width: 600px) {
+	html {
+		font-size: 17px;
+	}
+}
+
+@media (min-width: 800px) {
+	html {
+		font-size: 18px;
+	}
+}
+@media (min-width: 1000px) {
+	html {
+		font-size: 20px;
+	}
+}
+
+body {
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+		'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+}
+
+
+
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+		monospace;
+}
+
+input {
+	border: 0;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+}
+
+button,
+input[type='button'],
+input[type='submit'],
+input[type='reset'] {
+	text-decoration: none;
+	cursor: pointer;
+	text-align: center;
+	-webkit-appearance: none;
+	-moz-appearance: none;
+}
+
+button:focus,
+input:focus {
+	outline: 0;
+	box-shadow: 0px 0px 0.2rem 0.2rem rgba(0, 102, 255, 0.5);
+}
+
+button:disabled,
+input[type='button']:disabled,
+input[type='submit']:disabled {
+	cursor: default;
 }
